<resources>
    <string name="app_name">Inventory Project</string>

    <string name="empty_view_titleText">Ready to start the Business ?</string>
    <string name="empty_view_subtitleText">Why don\'t you add some products...</string>

    <string name="addProduct">Add Product</string>
    <string name="editProduct">Edit Product</string>

    <string name="buttonAdd">Add</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonDecrease">-</string>
    <string name="buttonIncrease">+</string>
    <string name="buttonOrder">Order</string>
    <string name="buttonAddImage">Browse Image</string>

    <string name="buttonSale">Sale</string>
    <string name="availableStock"> In stock</string>
    <string name="currency"> USD </string>

    <string name="productNameHint">Laptop</string>
    <string name="productName">Product Name :</string>
    <string name="productQuantity">Quantity :</string>
    <string name="productQuantityDefault">0</string>
    <string name="productPriceHint">10</string>
    <string name="productPrice">Price :</string>
    <string name="supplierEmail">inventoryApp@email.com</string>

    <string name="promptYes">Yes</string>
    <string name="promptDelete">Delete</string>
    <string name="promptProductDelete">Are you sure you want to Delete the product?</string>
    <string name="promptCancel">Cancel</string>
    <string name="promptLeave">Are you sure you want to leave?</string>

    <string name="toast_insertSuccess">New product successfully added!</string>
    <string name="toast_updateSuccessful">Product successfully updated!</string>
    <string name="toast_deleteSuccessful">Product successfully deleted!</string>
    <string name="toast_NoChange">Product was not updated or saved!</string>

    <string name="toast_insertFail">Error with saving product!</string>
    <string name="toast_updateFail">Error with updating product!</string>
    <string name="delete_toast_deleteFail">Could not delete product!</string>

    <string name="toast_invalidName">Please input a valid name</string>
    <string name="toast_invalidQuantity">Quantity cannot be less than zero</string>
    <string name="toast_invalidQuantityVal">Please input a valid quantity</string>
    <string name="toast_invalidPrice">Please input a valid price</string>
    <string name="toast_invalidImage">Please input a valid image</string>

    <string name="toast_outOfStock">Product currently out of stock!</string>
</resources>
