<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ovidiu.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/productName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/getName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/productNameHint"
                android:maxLength="16"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/productQuantity"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDecrease"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:text="@string/buttonDecrease" />

            <TextView
                android:id="@+id/finalQuantity"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/productQuantityDefault"
                android:textSize="14sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/buttonIncrease"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:text="@string/buttonIncrease" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/productPrice"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/getPrice"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:layout_weight="1"
                android:hint="@string/productPriceHint"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_menu_gallery"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/buttonAddImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonAddImage" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonOrder"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/buttonOrder" />
    </LinearLayout>
</ScrollView>